@@ -252,6 +252,9 @@ imap_full_address = False
 # Can be changed with a command line argument.
 imap_mailbox = u"INBOX"
 
+# Sync partial metadata by default
+metadata_sync_mode = "partial"
+
 # Whether the old filename format is in effect.
 old_filenames = False
 
